# HPC

./: .gitignore
Examples/: 2.2main.cpp  helloWorld-g  helloWorld.cpp
Examples/Chat/: example.cpp  storage.cpp
Exercises/12.1/: main.cpp
Exercises/12.3/: main.cpp
Exercises/12.4/: main.cpp
Exercises/12.6/: main.cpp
Exercises/2.1/: compiler-main.cpp  compiler-norm.cpp  compiler-norm.h
Exercises/2.2/: functions.cpp
Exercises/2.4/: genSignal.py  main.cpp  plotFrequencies.py  plotSignal.py  signal.txt
Exercises/4.1/: main.cpp
Exercises/4.2/: main.cpp
Exercises/4.3/: conjugateGradientMethod.cpp  conjugateGradientMethod.h
Exercises/4.4/: main.cpp  main.h
Exercises/7.1/: CMakeLists.txt
Exercises/7.1/src/: blasStuff.cpp  blasStuff.h  main.cpp  testFunction.cpp  testFunction.h
Scrapbook/: boilerplate-BLAS.cpp  boilerplate-LAPACK.cpp  boilerplate-MPI.cpp  errors.txt  functions.cpp  notes.md
Scrapbook/0-TheBasics/: simple-g  simple.cpp  simple.s  terminalInput  terminalInput.cpp
Scrapbook/1-Blas/: blasIntro.cpp
Scrapbook/2-LAPACK/: dgbmv.cpp  dgbtrf_dgbtrs.cpp  dgbtrf_dgbtrs.py  dgemv.cpp  dsyev.cpp  dsyev.py  intro.cpp  solveBanded.cpp  solveBanded.py
Scrapbook/3-CMake/: CMakeLists.txt  main.cpp
Scrapbook/5-Clusters/: main.cpp  myjob.slr
Scrapbook/6-MPI/: boilerplate.cpp  broadcast.cpp  gather1.cpp  gather2.cpp  intro.cpp  non_blocking_receive.cpp  point2point.cpp  reduce.cpp  scatter.cpp  unequal_A_loc.cpp  unequal_A_loc2.cpp
Tests/Mock Test/: main.cpp  modelSolution.cpp
Tests/Test 1/: main.cpp
